# hermes-meshtastic-adapter

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  SKILL.md  __init__.py  ack_state.py  adapter.py  chunking.py  mock_interface.py  node_freshness.py  plugin.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  schemas.py  telemetry_db.py  test_ack_state.py  test_chunking.py  test_meshtastic.py  test_node_freshness.py  test_transport.py  tools.py  transport.py
.github/workflows/: ci.yml  opencode-review.yml
