[project]
name = "hermes-meshtastic-adapter"
version = "1.0.0"
description = "Hermes Agent platform plugin for Meshtastic LoRa mesh networks"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Anthony Scotti" }]
dependencies = [
    "meshtastic==2.7.10",
    "pyserial>=3.5",
    "pypubsub>=4.0.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["_deps"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]
ignore = [
    # Hermes plugin handlers and tests lean on dynamic framework objects.
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"test_meshtastic.py" = [
    # Tests patch sys.path before importing Hermes and local plugin modules.
    "E402",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.coverage.run]
# tools.py is loaded dynamically as `meshtastic_tools` (see test_meshtastic.py
# and adapter._load_tools_module) to avoid colliding with Hermes' `tools` pkg.
source = ["adapter", "meshtastic_tools", "telemetry_db", "schemas"]
branch = false

[tool.coverage.report]
# NOTE: setting exclude_lines replaces coverage's default, so re-include
# "pragma: no cover" alongside our additions.
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.pyrefly]
# NOTE: __init__.py is intentionally NOT listed. The repo dir name is hyphenated
# ("hermes-meshtastic-adapter"), an invalid package name, so with __init__.py as
# a project root pyrefly resolves its relative imports (`from .adapter import …`)
# to `__unknown__` and errors. The shim's symbols are still type-checked via
# adapter.py / tools.py.
project-includes = [
    "adapter.py",
    "schemas.py",
    "telemetry_db.py",
    "tools.py",
]
project-excludes = [
    "/.git",
    "/.github",
    "/.pytest_cache",
    "/__pycache__",
    "/_deps",
    "/venv",
    "/.venv",
]
search-path = ["."]
python-platform = "linux"
python-version = "3.11"
ignore-missing-imports = [
    "gateway.",
    "meshtastic.",
    "pubsub.",
    "serial.",
]
